fix dragon rotation